--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -31,6 +31,7 @@
                                             <th>Soyad</th>
                                             <th>Email</th>
                                             <th>Telefon No</th>
+                                            <th>Rol</th>
                                             <th colspan="2">Actions</th>
                                         </tr>
                                     </thead>
@@ -44,7 +45,7 @@
                                                 <td><%= user.surname %></td>
                                                 <td><%= user.email %></td>
                                                 <td><%= user.telefon %></td>
-                                                
+                                                <td><%= user.role %></td>
                                                 <td>
                                                     <%= button_to "Düzenle", edit_user_path(user.id), method: :get, class: "btn btn-info float-right" %> 
                                                 </td>
