--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -6,14 +6,14 @@
             <div class="container-fluid">
                 
                 <!-- Page Heading -->
-                <h1 class="h3 mb-2 text-gray-800">Services</h1>                
+                <h1 class="h3 mb-2 text-gray-800">Kullanıcılar</h1>                
                     
                     <!-- DataTales Example -->
                     <div class="card shadow mb-4">
                         <div class="card-header py-3">
                           <div class="row container">
                             <div class="col-md-6" style="margin: auto;">
-                                <h6 class="m-0 font-weight-bold text-primary">All Of Services</h6>
+                                <h6 class="m-0 font-weight-bold text-primary">All Of Users</h6>
                             </div>
                             <div class="col-md-6">
                                 <%= button_to "Ekle", new_user_path, method: :get, class: "btn btn-primary float-right" %>                          
