--- a/app/views/admin/index.html.erb
+++ b/app/views/admin/index.html.erb
@@ -2,6 +2,7 @@
                 <div class="container-fluid">
 
                     <!-- Page Heading -->
+                    <%= render 'layouts/alerts'%>  
                     <div class="d-sm-flex align-items-center justify-content-between mb-4">
                         <h1 class="h3 mb-0 text-gray-800">Dashboard</h1>
                         <a href="#" class="d-none d-sm-inline-block btn btn-sm btn-primary shadow-sm"><i
