Added Admin login controls lines.

--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -49,7 +49,7 @@
                                 <a class="small" href="forgot-password.html">Forgot Password?</a>
                             </div>
                             <div class="text-center">
-                                <a class="small" href="login.html">Already have an account? Login!</a>
+                                <%= link_to "Already have an account? Login!", new_user_session_path, class: "small" %>
                             </div>
                         </div>
                     </div>
