--- a/app/views/devise/shared/_form.html.erb
+++ b/app/views/devise/shared/_form.html.erb
@@ -36,7 +36,7 @@
                                         <%= f.password_field :password_confirmation, autocomplete: "new-password", class: "form-control form-control-user", placeholder: "Repeat Password" %>
                                     </div>
                                 </div>
-
-                                <%= button_to 'Submit', new_user_registration_path ,class: 'btn btn-primary btn-user btn-block' %>
+                                
+                                <%= button_to 'Gönder', new_user_registration_path ,class: 'btn btn-primary btn-user btn-block' %>
                             
 <% end %>
