--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -46,10 +46,10 @@
                                 </a>
                             <hr>
                             <div class="text-center">
-                                <a class="small" href="forgot-password.html">Forgot Password?</a>
+                                <%= link_to "Şifremi Unuttum!", new_user_password_path, class: "small" %>
                             </div>
                             <div class="text-center">
-                                <%= link_to "Already have an account? Login!", new_user_session_path, class: "small" %>
+                                <%= link_to "Zaten bir hesabın mı var? Giriş Yap!", new_user_session_path, class: "small" %>
                             </div>
                         </div>
                     </div>
