--- a/app/views/devise/shared/_form.html.erb
+++ b/app/views/devise/shared/_form.html.erb
@@ -1,7 +1,7 @@
 <%= form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
                                 <%= render "devise/shared/error_messages", resource: resource %>
                                  <div class="form-group">
-                                    <%= f.text_field :tckn, class: "form-control form-control-user", placeholder: "T.C. Kimlik No" %>
+                                    <%= f.text_field :tckn, autofocus: true, class: "form-control form-control-user", placeholder: "T.C. Kimlik No" %>
                                 </div>
                                 <div class="form-group row">
                                     <div class="col-sm-6 mb-3 mb-sm-0">
@@ -12,7 +12,7 @@
                                     </div>
                                 </div>
                                 <div class="form-group">
-                                   <%= f.email_field :email, autofocus: true, autocomplete: "email", class: "form-control form-control-user", placeholder: "Email Address" %>
+                                   <%= f.email_field :email, autocomplete: "email", class: "form-control form-control-user", placeholder: "Email Address" %>
                                 </div>
                                  <div class="form-group row">
                                     <div class="col-sm-6 mb-3 mb-sm-0">
