--- a/app/views/customer/shared/_header.html.erb
+++ b/app/views/customer/shared/_header.html.erb
@@ -9,8 +9,8 @@
 
 	      <div class="collapse navbar-collapse" id="ftco-nav">
 	        <ul class="navbar-nav ml-auto">
-	          <li class="nav-item active"><a href="index.html" class="nav-link">Home</a></li>
-	          <li class="nav-item"><a href="#" class="nav-link">Our Rooms</a></li>
+			  <li class="nav-item active"><%= link_to 'Home', root_path, method: :get, class: 'nav-link' %></li>
+			  <li class="nav-item"><%= link_to 'Our Rooms', our_rooms_path, method: :get, class: 'nav-link' %></li>
 	          <li class="nav-item"><a href="#" class="nav-link">Restaurant</a></li>
 	          <li class="nav-item"><a href="blog.html" class="nav-link">Blog</a></li>
 	          <li class="nav-item"><a href="contact.html" class="nav-link">Contact</a></li>
