Rooms are listed on the index page.

--- a/app/views/customer/index.html.erb
+++ b/app/views/customer/index.html.erb
@@ -288,194 +288,129 @@
           </div>
         </div>  
     		<div class="row no-gutters">
+    			
+				<% @rooms.each do |room| %>
     			<div class="col-lg-6">
     				<div class="room-wrap d-md-flex ftco-animate">
-    					<a href="#" class="img" style="background-image: url(customer/images/room-6.jpg);"></a>
+						
+    					<a href="<%= single_room_path(room.id) %>" class="img" style="background-image: url(<%= url_for(room.photos.first) %>);"></a>
+						
     					<div class="half left-arrow d-flex align-items-center">
     						<div class="text p-4 text-center">
     							<p class="star mb-0"><span class="ion-ios-star"></span><span class="ion-ios-star"></span><span class="ion-ios-star"></span><span class="ion-ios-star"></span><span class="ion-ios-star"></span></p>
-    							<p class="mb-0"><span class="price mr-1">$120.00</span> <span class="per">per night</span></p>
-	    						<h3 class="mb-3"><a href="rooms.html">King Room</a></h3>
-	    						<p class="pt-1"><a href="room-single.html" class="btn-custom px-3 py-2 rounded">View Details <span class="icon-long-arrow-right"></span></a></p>
+    							<p class="mb-0"><span class="price mr-1"><%= room.price %>₺</span> <span class="per">per night</span></p>
+	    						
+	    						<p class="pt-1"><a href="<%= single_room_path(room.id) %>" class="btn-custom px-3 py-2 rounded">View Details <span class="icon-long-arrow-right"></span></a></p>
     						</div>
     					</div>
     				</div>
     			</div>
-    			<div class="col-lg-6">
-    				<div class="room-wrap d-md-flex ftco-animate">
-    					<a href="#" class="img" style="background-image: url(customer/images/room-1.jpg);"></a>
-    					<div class="half left-arrow d-flex align-items-center">
-    						<div class="text p-4 text-center">
-    							<p class="star mb-0"><span class="ion-ios-star"></span><span class="ion-ios-star"></span><span class="ion-ios-star"></span><span class="ion-ios-star"></span><span class="ion-ios-star"></span></p>
-    							<p class="mb-0"><span class="price mr-1">$120.00</span> <span class="per">per night</span></p>
-	    						<h3 class="mb-3"><a href="rooms.html">Suite Room</a></h3>
-	    						<p class="pt-1"><a href="room-single.html" class="btn-custom px-3 py-2 rounded">View Details <span class="icon-long-arrow-right"></span></a></p>
-    						</div>
-    					</div>
-    				</div>
-    			</div>
+				<% end %>
 
-    			<div class="col-lg-6">
-    				<div class="room-wrap d-md-flex ftco-animate">
-    					<a href="#" class="img order-md-last" style="background-image: url(customer/images/room-2.jpg);"></a>
-    					<div class="half right-arrow d-flex align-items-center">
-    						<div class="text p-4 text-center">
-    							<p class="star mb-0"><span class="ion-ios-star"></span><span class="ion-ios-star"></span><span class="ion-ios-star"></span><span class="ion-ios-star"></span><span class="ion-ios-star"></span></p>
-    							<p class="mb-0"><span class="price mr-1">$120.00</span> <span class="per">per night</span></p>
-	    						<h3 class="mb-3"><a href="rooms.html">Family Room</a></h3>
-	    						<p class="pt-1"><a href="room-single.html" class="btn-custom px-3 py-2 rounded">View Details <span class="icon-long-arrow-right"></span></a></p>
-    						</div>
-    					</div>
-    				</div>
-    			</div>
-    			<div class="col-lg-6">
-    				<div class="room-wrap d-md-flex ftco-animate">
-    					<a href="#" class="img order-md-last" style="background-image: url(customer/images/room-3.jpg);"></a>
-    					<div class="half right-arrow d-flex align-items-center">
-    						<div class="text p-4 text-center">
-    							<p class="star mb-0"><span class="ion-ios-star"></span><span class="ion-ios-star"></span><span class="ion-ios-star"></span><span class="ion-ios-star"></span><span class="ion-ios-star"></span></p>
-    							<p class="mb-0"><span class="price mr-1">$120.00</span> <span class="per">per night</span></p>
-	    						<h3 class="mb-3"><a href="rooms.html">Deluxe Room</a></h3>
-	    						<p class="pt-1"><a href="room-single.html" class="btn-custom px-3 py-2 rounded">View Details <span class="icon-long-arrow-right"></span></a></p>
-    						</div>
-    					</div>
-    				</div>
-    			</div>
-
-    			<div class="col-lg-6">
-    				<div class="room-wrap d-md-flex ftco-animate">
-    					<a href="#" class="img" style="background-image: url(customer/images/room-4.jpg);"></a>
-    					<div class="half left-arrow d-flex align-items-center">
-    						<div class="text p-4 text-center">
-    							<p class="star mb-0"><span class="ion-ios-star"></span><span class="ion-ios-star"></span><span class="ion-ios-star"></span><span class="ion-ios-star"></span><span class="ion-ios-star"></span></p>
-    							<p class="mb-0"><span class="price mr-1">$120.00</span> <span class="per">per night</span></p>
-	    						<h3 class="mb-3"><a href="rooms.html">Luxury Room</a></h3>
-	    						<p class="pt-1"><a href="room-single.html" class="btn-custom px-3 py-2 rounded">View Details <span class="icon-long-arrow-right"></span></a></p>
-    						</div>
-    					</div>
-    				</div>
-    			</div>
-    			<div class="col-lg-6">
-    				<div class="room-wrap d-md-flex ftco-animate">
-    					<a href="#" class="img" style="background-image: url(customer/images/room-5.jpg);"></a>
-    					<div class="half left-arrow d-flex align-items-center">
-    						<div class="text p-4 text-center">
-    							<p class="star mb-0"><span class="ion-ios-star"></span><span class="ion-ios-star"></span><span class="ion-ios-star"></span><span class="ion-ios-star"></span><span class="ion-ios-star"></span></p>
-    							<p class="mb-0"><span class="price mr-1">$120.00</span> <span class="per">per night</span></p>
-	    						<h3 class="mb-3"><a href="rooms.html">Superior Room</a></h3>
-	    						<p class="pt-1"><a href="room-single.html" class="btn-custom px-3 py-2 rounded">View Details <span class="icon-long-arrow-right"></span></a></p>
-    						</div>
-    					</div>
-    				</div>
-    			</div>
     		</div>
     	</div>
     </section>
 
-
 		
-		
-
-		
-		<section class="ftco-section ftco-menu bg-light">
-			<div class="container-fluid px-md-4">
-				<div class="row justify-content-center mb-5 pb-3">
-          <div class="col-md-7 heading-section text-center ftco-animate">
-          	<span class="subheading">Restaurant</span>
-            <h2>Restaurant</h2>
-          </div>
-        </div>
-				<div class="row">
-        	<div class="col-lg-6 col-xl-4 d-flex">
-        		<div class="pricing-entry rounded d-flex ftco-animate">
-        			<div class="img" style="background-image: url(customer/images/menu-1.jpg);"></div>
-        			<div class="desc p-4">
-	        			<div class="d-md-flex text align-items-start">
-	        				<h3><span>Grilled Crab with Onion</span></h3>
-	        				<span class="price">$20.00</span>
-	        			</div>
-	        			<div class="d-block">
-	        				<p>A small river named Duden flows by their place and supplies</p>
-	        			</div>
-        			</div>
+	<section class="ftco-section ftco-menu bg-light">
+		<div class="container-fluid px-md-4">
+			<div class="row justify-content-center mb-5 pb-3">
+        		<div class="col-md-7 heading-section text-center ftco-animate">
+            		<span class="subheading">Restaurant</span>
+            		<h2>Restaurant</h2>
         		</div>
         	</div>
-        	<div class="col-lg-6 col-xl-4 d-flex">
-        		<div class="pricing-entry rounded d-flex ftco-animate">
-        			<div class="img" style="background-image: url(customer/images/menu-2.jpg);"></div>
-        			<div class="desc p-4">
-	        			<div class="d-md-flex text align-items-start">
-	        				<h3><span>Grilled Crab with Onion</span></h3>
-	        				<span class="price">$20.00</span>
-	        			</div>
-	        			<div class="d-block">
-	        				<p>A small river named Duden flows by their place and supplies</p>
-	        			</div>
+			<div class="row">
+        		<div class="col-lg-6 col-xl-4 d-flex">
+        			<div class="pricing-entry rounded d-flex ftco-animate">
+        				<div class="img" style="background-image: url(customer/images/menu-1.jpg);"></div>
+        					<div class="desc p-4">
+	        					<div class="d-md-flex text align-items-start">
+	        						<h3><span>Grilled Crab with Onion</span></h3>
+	        						<span class="price">$20.00</span>
+	        					</div>
+	        					<div class="d-block">
+	        						<p>A small river named Duden flows by their place and supplies</p>
+	        					</div>
+        					</div>
+        				</div>
+        			</div>
+        			<div class="col-lg-6 col-xl-4 d-flex">
+        				<div class="pricing-entry rounded d-flex ftco-animate">
+        				<div class="img" style="background-image: url(customer/images/menu-2.jpg);"></div>
+        				<div class="desc p-4">
+	        				<div class="d-md-flex text align-items-start">
+	        					<h3><span>Grilled Crab with Onion</span></h3>
+	        					<span class="price">$20.00</span>
+	        				</div>
+	        				<div class="d-block">
+	        					<p>A small river named Duden flows by their place and supplies</p>
+	        				</div>
+        				</div>
         			</div>
         		</div>
-        	</div>
-        	<div class="col-lg-6 col-xl-4 d-flex">
-        		<div class="pricing-entry rounded d-flex ftco-animate">
-        			<div class="img" style="background-image: url(customer/images/menu-3.jpg);"></div>
-        			<div class="desc p-4">
-	        			<div class="d-md-flex text align-items-start">
-	        				<h3><span>Grilled Crab with Onion</span></h3>
-	        				<span class="price">$20.00</span>
-	        			</div>
-	        			<div class="d-block">
-	        				<p>A small river named Duden flows by their place and supplies</p>
-	        			</div>
+        		<div class="col-lg-6 col-xl-4 d-flex">
+        			<div class="pricing-entry rounded d-flex ftco-animate">
+        				<div class="img" style="background-image: url(customer/images/menu-3.jpg);"></div>
+        				<div class="desc p-4">
+	        				<div class="d-md-flex text align-items-start">
+	        					<h3><span>Grilled Crab with Onion</span></h3>
+	        					<span class="price">$20.00</span>
+	        				</div>
+	        				<div class="d-block">
+	        					<p>A small river named Duden flows by their place and supplies</p>
+	        				</div>
+        				</div>
         			</div>
         		</div>
-        	</div>
-        	<div class="col-lg-6 col-xl-4 d-flex">
-        		<div class="pricing-entry rounded d-flex ftco-animate">
-        			<div class="img" style="background-image: url(customer/images/menu-4.jpg);"></div>
-        			<div class="desc p-4">
-	        			<div class="d-md-flex text align-items-start">
-	        				<h3><span>Grilled Crab with Onion</span></h3>
-	        				<span class="price">$20.00</span>
-	        			</div>
-	        			<div class="d-block">
-	        				<p>A small river named Duden flows by their place and supplies</p>
-	        			</div>
+        		<div class="col-lg-6 col-xl-4 d-flex">
+        			<div class="pricing-entry rounded d-flex ftco-animate">
+        				<div class="img" style="background-image: url(customer/images/menu-4.jpg);"></div>
+        				<div class="desc p-4">
+	        				<div class="d-md-flex text align-items-start">
+	        					<h3><span>Grilled Crab with Onion</span></h3>
+	        					<span class="price">$20.00</span>
+	        				</div>
+	        				<div class="d-block">
+	        					<p>A small river named Duden flows by their place and supplies</p>
+	        				</div>
+        				</div>
         			</div>
         		</div>
-        	</div>
-        	<div class="col-lg-6 col-xl-4 d-flex">
-        		<div class="pricing-entry rounded d-flex ftco-animate">
-        			<div class="img" style="background-image: url(customer/images/menu-5.jpg);"></div>
-        			<div class="desc p-4">
-	        			<div class="d-md-flex text align-items-start">
-	        				<h3><span>Grilled Crab with Onion</span></h3>
-	        				<span class="price">$20.00</span>
-	        			</div>
-	        			<div class="d-block">
-	        				<p>A small river named Duden flows by their place and supplies</p>
-	        			</div>
+        		<div class="col-lg-6 col-xl-4 d-flex">
+        			<div class="pricing-entry rounded d-flex ftco-animate">
+        				<div class="img" style="background-image: url(customer/images/menu-5.jpg);"></div>
+        				<div class="desc p-4">
+	        				<div class="d-md-flex text align-items-start">
+	        					<h3><span>Grilled Crab with Onion</span></h3>
+	        					<span class="price">$20.00</span>
+	        				</div>
+	        				<div class="d-block">
+	        					<p>A small river named Duden flows by their place and supplies</p>
+	        				</div>
+        				</div>
         			</div>
         		</div>
-        	</div>
-        	<div class="col-lg-6 col-xl-4 d-flex">
-        		<div class="pricing-entry rounded d-flex ftco-animate">
-        			<div class="img" style="background-image: url(customer/images/menu-6.jpg);"></div>
-        			<div class="desc p-4">
-	        			<div class="d-md-flex text align-items-start">
-	        				<h3><span>Grilled Crab with Onion</span></h3>
-	        				<span class="price">$20.00</span>
-	        			</div>
-	        			<div class="d-block">
-	        				<p>A small river named Duden flows by their place and supplies</p>
-	        			</div>
+        		<div class="col-lg-6 col-xl-4 d-flex">
+        			<div class="pricing-entry rounded d-flex ftco-animate">
+        				<div class="img" style="background-image: url(customer/images/menu-6.jpg);"></div>
+        				<div class="desc p-4">
+	        				<div class="d-md-flex text align-items-start">
+	        					<h3><span>Grilled Crab with Onion</span></h3>
+	        					<span class="price">$20.00</span>
+	        				</div>
+	        				<div class="d-block">
+	        					<p>A small river named Duden flows by their place and supplies</p>
+	        				</div>
+        				</div>
         			</div>
         		</div>
+        		<div class="col-md-12 text-center ftco-animate">
+        			<p><a href="#" class="btn btn-primary rounded">View All Menu</a></p>
+        		</div>
         	</div>
-        	<div class="col-md-12 text-center ftco-animate">
-        		<p><a href="#" class="btn btn-primary rounded">View All Menu</a></p>
-        	</div>
-        </div>
-			</div>
-		</section>
+		</div>
+	</section>
 
 
     <section class="ftco-section">
