Added company module. Adding and listing companies in the Admin template.

--- a/app/views/admin/shared/_sidebar.html.erb
+++ b/app/views/admin/shared/_sidebar.html.erb
@@ -54,6 +54,22 @@
             <!-- Divider -->
             <hr class="sidebar-divider d-none d-md-block">
 
+            <!-- Heading -->
+            <div class="sidebar-heading">
+                Addons
+            </div>
+
+            <!-- Nav Item - Tables -->
+            <li class="nav-item">
+            <%= link_to(companies_path, class: "nav-link") do %>
+                    <i class="fas fa-fw fa-table"></i>
+                    <span>Otel İletişim</span></a>
+                <% end %>
+            </li>
+
+            <!-- Divider -->
+            <hr class="sidebar-divider d-none d-md-block">
+
             <!-- Sidebar Toggler (Sidebar) -->
             <div class="text-center d-none d-md-inline">
                 <button class="rounded-circle border-0" id="sidebarToggle"></button>
