--- a/app/views/companies/new.html.erb
+++ b/app/views/companies/new.html.erb
@@ -29,7 +29,7 @@
                                     <%= form.label "Otel Telefon Numarası", class: "form-check-label" %>
                                     <%= form.phone_field :phone, placeholder: 'Otel Telefon', class: "form-control" %> <br>
                                     <%= form.label "Otel E-Posta", class: "form-check-label" %>
-                                    <%= form.text_field :address, placeholder: 'gunesler_otel@example.com', class: "form-control" %> <br>
+                                    <%= form.text_field :email, placeholder: 'gunesler_otel@example.com', class: "form-control" %> <br>
                                     <%= form.label "Otel Web Adresi", class: "form-check-label" %>
                                     <%= form.text_field :website, placeholder: 'www.guneslerotel.example.com', class: "form-control" %> <br>
                                     <%= form.label "Otel Konum-X", class: "form-check-label" %>
